--- a/exemplo1.html
+++ b/exemplo1.html
@@ -13,18 +13,28 @@
       <ul id="listaUsuarios"></ul>
      
     <script>
+        // livra de fazer outra atividade quem chamou esta função
         async function carregarUsuarios() {
+            //tenta
             try {
+                // await -> aguarda resposta da API
                 const resposta = await fetch("https://jsonplaceholder.typicode.com/users");
+                // a API retornou string, precisamos converter para JSON
                 const usuarios = await resposta.json();
+                //lista = ul
                 const lista = document.getElementById("listaUsuarios");
                 lista.innerHTML = ""; // limpa lista
+                
+                //para cada usuário
                 for (let i = 0; i < usuarios.length; i++) {
+                    //cria um elemento html em li
                     const li = document.createElement("li");
+                    // insere texto no item da lista - nome e email do usuário
                     li.textContent = `${usuarios[i].name} - ${usuarios[i].email}`;
+                    // associa o item da lista à lista
                     lista.appendChild(li);
                 }
-            } catch (erro) {
+            } catch (erro) { // se der erro na api(não consegue acessar), devolve o erro no console 
                 console.error("Erro ao carregar usuários:", erro);
                 alert("Não foi possível carregar os dados da API.");
             }
